--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
