--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.1.4",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.12.0",
